--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
@@ -17,6 +19,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.17.43",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
