--- a/package.json
+++ b/package.json
@@ -12,7 +12,19 @@
     "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "uuid": "^11.1.0",
+        "uuid": "^11.1.0",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^20.17.43",
+    "@types/uuid": "^10.0.0",
+    "@types/node-cron": "^3.0.0",
+    "@types/nodemailer": "^6.0.0",,
     "zod": "^3.24.4"
   },
   "devDependencies": {
